Changed code to Java10